// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpacingBlockStyled /> should render component with \`inline = true\` 1`] = `
<SpacingBlockStyled
  inline={true}
>
  <div
    className="SpacingBlockStyled-iTeUCC dAjQWc"
  />
</SpacingBlockStyled>
`;

exports[`<SpacingBlockStyled /> should render component with the default props 1`] = `
<SpacingBlockStyled
  inline={false}
>
  <div
    className="SpacingBlockStyled-iTeUCC bJanmC"
  />
</SpacingBlockStyled>
`;
